apps/authority/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authority
  namespace: authority
  labels:
    app: authority
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authority
  template:
    metadata:
      labels:
        app: authority
    spec:
      containers:
        - name: authority-container
          image: 201076423/cleverbit:authority
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
          # livenessProbe:
          #   httpGet:
          #     path: /healthz
          #     port: 8080
          #   initialDelaySeconds: 10
          #   periodSeconds: 10
          # readinessProbe:
          #   httpGet:
          #     path: /ready
          #     port: 8080
          #   initialDelaySeconds: 5
          #   periodSeconds: 5
