apps/authority/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: authority-service
  namespace: authority
spec:
  type: ClusterIP
  selector:
    app: authority
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
